# rnnoise

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt
cmake/: config.h.in  rnnoise.pc.in  rnnoiseConfig.cmake.in
examples/: CMakeLists.txt
src/: CMakeLists.txt  common.h  dump_features.c  msvc_compat.h  write_weights.c
src/x86/: x86cpu.c
